# py-shinylive-authentication

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  shinylive_deploy.toml
.github/workflows/: python-publish.yml  python-pytest.yml
src/: app.py  shiny_auth.py  shinylive_auth.py
src/restapi_security/: auth.py  pyodide_wrapper.py  shiny_api_calls.py
src/simple_security/: auth.py  models.py  storage.py
src_dev/: app.py  requirements.txt
src_dev/restapi_security/: auth.py
src_dev/simple_security/: auth.py
src_webserver/: app_routes.py  app_security.py  main.py  routes.py
staging/dependencies/: shinylive_auth-2024.8.4-py3-none-any.whl
tests/: model.py  test_app.py  test_shinylive.py
